# distributed-transactions-practice

./: .gitattributes  .gitignore  README.md  build.gradle.kts  codestyle.xml  order-create.sh  settings.gradle.kts
.run/: OrdersApplication.run.xml  OrdersGrpcTest.run.xml  PaymentsApplication.run.xml  ReserveApplication.run.xml  distributed-transactions-practice [rollbackCount].run.xml  distributed-transactions-practice [update].run.xml  distributed-transactions-practice_payments [rollbackCount].run.xml
config/: codestyle.xml
docker/: Taskfile.yaml  docker-compose-commons-min.yaml  docker-compose-commons.yaml  docker-compose-go.yaml  docker-compose-java-sync.yaml  docker-compose-java.yaml  docker-compose.yaml  recreate-commons.sh  recreate.sh  remove-untagged-images.sh  stop-java.sh
golang/: Dockerfile.orders  Dockerfile.payments  Dockerfile.reserve  Dockerfile.tpc  IMPLEMENTATION_SUMMARY.md  README.md  Taskfile.yaml  build-and-run.bat  build-and-run.sh  docker-compose.yml  go.mod  go.sum
grpc-reactor/: build.gradle.kts
grpc-webflux/: build.gradle.kts
idempotent-consumer/: build.gradle.kts
integration-test/: build.gradle.kts
java/: Taskfile.yaml  build.gradle.kts  settings.gradle.kts
jooq-postgres-prepared-transaction/: build.gradle.kts
jooq-r2dbc/: build.gradle.kts
jooq-utils/: build.gradle.kts
k6/: before-k6.cmd  berofe-k6.reg  create-order.js  flamegraph.html  list-orders.js  profile-asyncprof.sh  profile-go-pprof.sh  profile-java-asyncprof.sh  profile-java-jfr.sh  profile-jfr.sh  profile.jfr  script.js
orders/: build.gradle.kts
proto/: easyp-order.yaml  easyp-payment.yaml  easyp-reserve.yaml  easyp-tpc.yaml  easyp.yaml  p.cmd
protobuf-utils/: build.gradle.kts
r2dbc-postgres/: build.gradle.kts
request/: order.json  (+1 more)
rust-services/payments-service/: Cargo.toml  Dockerfile
rust-services/payments-service/src/: events.rs  models.rs  service.rs
rust-services/tests/: Cargo.toml
rust/common/: Cargo.toml
rust/common/src/: database.rs  lib.rs  status.rs  transaction.rs  utils.rs  validation.rs
rust/reserve-service/: Cargo.toml
rust/reserve-service/src/: main.rs  models.rs  service.rs
(+802 files in other folders)
