[package]
name = "payments-service"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
futures.workspace = true
rdkafka.workspace = true

[dependencies.common]
path = "../common"

[[bin]]
name = "payments-service"
path = "src/main.rs"