[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tonic.workspace = true
prost-types.workspace = true
async-trait.workspace = true
futures.workspace = true

[dependencies.proto-build]
path = "../proto-build"